objects/ShipIt_PackageType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This contain the list of available Package Types and additional information, including weight limits and other specific requirements.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate active or inactive packaging types</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Dimension__c</fullName>
        <description>Contains the default dimension in the format (Length x Breadth x Height ).</description>
        <label>Default Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the flag to check that package is custom or standard.</description>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <description>Additional text to describe the package.  This will appear below the package in the selection screen.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Full_Name__c</fullName>
        <description>Name of the package provided by the shipping vendor.</description>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Image__c</fullName>
        <description>URL to the Static Resource or Content Delivery Network location containing the image of the package.</description>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_Limit__c</fullName>
        <description>Max weight for the package specified by Vendor.</description>
        <label>Weight Limit</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>ShipIt PackageType</label>
</CustomObject>